[tool.poetry]
name = "dataclasses_yaml"
version = "0.1.0"
description = ""
authors = ["nalabelle <nalabelle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.3.1"
dataclasses-json = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
